Fix problem with header not showing right on inside-pages
because of the admin-bar.

--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -58,7 +58,7 @@
     }
   }
 
-  .omedscrolled .admin-bar & {
+  .omedscrolled .admin-bar &, .omedscrolled.admin-bar & {
     @include breakpoint($screen $navflip) {
       top: 32px;
     }
